samples/_failures_safe/1761475436_ad0936_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07a0b811.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_07a0b811.c:152:9: error: expected ‘{’ at end of input
  152 |         struct
      |         ^~~~~~
./samples/SAFE/__tmp_07a0b811.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_07a0b811.c:152:9: error: expected declaration or statement at end of input
